# Card-Reader-for-KU-Card

./: .gitignore  CMakeLists.txt  README.md
NfcrdlibEx1_BasicDiscoveryLoop/: CMakeLists.txt  NfcrdlibEx1_BasicDiscoveryLoop.c
NfcrdlibEx1_BasicDiscoveryLoop/intfs/: NfcrdlibEx1_BasicDiscoveryLoop.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx2_AdvancedDiscoveryLoop/: CMakeLists.txt  NfcrdlibEx2_AdvancedDiscoveryLoop.c  Readme.txt
NfcrdlibEx2_AdvancedDiscoveryLoop/intfs/: NfcrdlibEx2_AdvancedDiscoveryLoop.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx3_NFCForum/: CMakeLists.txt  NfcrdlibEx3_NFCForum.c  Readme.txt
NfcrdlibEx3_NFCForum/intfs/: NfcrdlibEx3_NFCForum.h
NfcrdlibEx4_MIFAREClassic/: CMakeLists.txt  NfcrdlibEx4_MIFAREClassic.c  Readme.txt
NfcrdlibEx4_MIFAREClassic/intfs/: NfcrdlibEx4_MIFAREClassic.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx5_ISO15693/: CMakeLists.txt  NfcrdlibEx5_ISO15693.c  Readme.txt
NfcrdlibEx5_ISO15693/intfs/: NfcrdlibEx5_ISO15693.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx6_EMVCo_Loopback/: CMakeLists.txt  NfcrdlibEx6_EMVCo_Loopback.c  Readme.txt
NfcrdlibEx6_EMVCo_Loopback/intfs/: NfcrdlibEx6_EMVCo_Loopback.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx7_EMVCo_Polling/: NfcrdlibEx7_EMVCo_Polling.c  Readme.txt
NfcrdlibEx7_EMVCo_Polling/intfs/: NfcrdlibEx7_EMVCo_Polling.h
NfcrdlibEx8_HCE_T4T/: CMakeLists.txt  ISO_10373_6_PICC_Test_Bench_Config.mpecc  NfcrdlibEx8_HCE_T4T.c  Readme.txt
NfcrdlibEx8_HCE_T4T/intfs/: NfcrdlibEx8_HCE_T4T.h  ph_NxpBuild_App.ref.txt
NfcrdlibEx9_NTagI2C/: CMakeLists.txt  NfcrdlibEx9_NTagI2C.c  Readme.txt
NfcrdlibEx9_NTagI2C/intfs/: NfcrdlibEx9_NTagI2C.h  ph_NxpBuild_App.ref.txt
Nfcrdlib_SimplifiedAPI_EMVCo/: .Nfcrdlib_SimplifiedAPI_EMVCo.c.swp  CMakeLists.txt  Nfcrdlib_SimplifiedAPI_EMVCo  Nfcrdlib_SimplifiedAPI_EMVCo.c  Readme.txt  postSend.c  postSend.h
Nfcrdlib_SimplifiedAPI_EMVCo/intfs/: Nfcrdlib_SimplifiedAPI_EMVCo.h  phApp_Init.h  ph_NxpBuild_App.ref.txt
Nfcrdlib_SimplifiedAPI_EMVCo/src/: phApp_Init.c
Nfcrdlib_SimplifiedAPI_ISO/: CMakeLists.txt  Nfcrdlib_SimplifiedApi_ISO.c  Readme.txt
Nfcrdlib_SimplifiedAPI_ISO/intfs/: Nfcrdlib_SimplifiedApi_ISO.h  Nfcrdlib_SimplifiedApi_ISO_15693.h  Nfcrdlib_SimplifiedApi_ISO_18000.h  Nfcrdlib_SimplifiedApi_ISO_MFC.h  Nfcrdlib_SimplifiedApi_ISO_MFDF.h  Nfcrdlib_SimplifiedApi_ISO_MFUL.h  ph_NxpBuild_App.ref.txt
Nfcrdlib_SimplifiedAPI_ISO/src/: Nfcrdlib_SimplifiedApi_ISO_15693.c  Nfcrdlib_SimplifiedApi_ISO_18000.c  Nfcrdlib_SimplifiedApi_ISO_Layer4TypeA.c  Nfcrdlib_SimplifiedApi_ISO_MFC.c  Nfcrdlib_SimplifiedApi_ISO_MFDF.c  Nfcrdlib_SimplifiedApi_ISO_MFUL.c  Nfcrdlib_SimplifiedApi_ISO_TypeB.c
